# clarkson_seminar_llm_apis

./: .gitignore  Clarkson_Seminar_LLMs_APIs.ipynb  README.md  pyproject.toml  requirements.txt
tutorial_notebooks/: Course Catalog 2023-2024_0.pdf.crdownload  intro.ipynb  intro_agent_example.ipynb  intro_example.ipynb  intro_katy_perry_example.ipynb  qa_model.ipynb
tutorial_notebooks/qa_models/: banavar_website.ipynb  clarkson_courses.ipynb  nfl_schedules.ipynb  paper.ipynb
