[tool.poetry]
name = "clarkson-seminar-llm-apis"
version = "0.1.0"
description = ""
authors = ["justin5927 <jauyeung59@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.294"
ipykernel = "^6.25.2"
openai = "^0.28.0"
python-dotenv = "^1.0.0"
google-search-results = "^2.4.2"
unstructured = "^0.10.15"
selenium = "^4.12.0"
chromadb = "^0.4.10"
tiktoken = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
